apps/core/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: network
  labels:
    app: adguard-home
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.4.201
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  selector:
    app: adguard-home
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-ui
  namespace: network
  labels:
    app: adguard-home
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: adguard-home
