apps/core/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home-ingress
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: "ca-clusterissuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - adguard.lab1830.com
    secretName: adguard-tls
  rules:
  - host: adguard.lab1830.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-home-ui
            port:
              number: 80
